force-app/main/default/objects/QuoteLineItem/fields/Descuento_adicional__c.field-meta.xml
<CustomField>
    <fullName>Descuento_adicional__c</fullName>
    <description>Este descuento se ingresa de forma manual</description>
    <label>Descuento adicional</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>