force-app/main/default/objects/QuoteLineItem/fields/DescuentoSAP__c.field-meta.xml
<CustomField>
    <fullName>DescuentoSAP__c</fullName>
    <label>Descuento SAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>