force-app/main/default/objects/QuoteLineItem/fields/IMP_Descuento__c.field-meta.xml
<CustomField>
    <fullName>IMP_Descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Descuento que aplica de acuerdo a promociones</description>
    <label>Descuento</label>
    <referenceTo>Descuento__c</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>