force-app/main/default/objects/QuoteLineItem/fields/IMP_Disponibilidad__c.field-meta.xml
<CustomField>
    <fullName>IMP_Disponibilidad__c</fullName>
    <label>Disponibilidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>