force-app/main/default/objects/QuoteLineItem/fields/Peso_bruto__c.field-meta.xml
<CustomField>
    <fullName>Peso_bruto__c</fullName>
    <formula>Quantity * Product2.Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>