force-app/main/default/objects/QuoteLineItem/fields/PoliticaDescuento__c.field-meta.xml
<CustomField>
    <fullName>PoliticaDescuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Política de descuento</label>
    <referenceTo>PoliticaDescuento__c</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>