force-app/main/default/objects/QuoteLineItem/fields/PrecioTotalConDescuentos__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotalConDescuentos__c</fullName>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>